--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,21 @@ jobs:
 
           sources=("artist" "network" "presenter")
           for source in "${sources[@]}"; do
-            curl "https://test-block-booking.pantheonsite.io/api/$source" --header "Authorization: Basic ${{secrets.API_KEY}}" >> ${source}.json
+            offset=0
+            data=""
+            while true; do
+              echo "Fetching ${source}s with offset $offset"
+              response=$(curl -s "https://test-block-booking.pantheonsite.io/api/$source?page%5Boffset%5D=$offset" --header "Authorization: Basic ${{secrets.API_KEY}}")
+              if [ "$(echo $response | jq '.data | length')" -eq 0 ]; then 
+                echo "No more data for $source"
+                break
+              fi
+
+              data=$(jq -s '[.[][]]' <<<"$data $(echo $response | jq '.data')")
+              offset=$((offset + 50))
+            done
+
+            echo "{\"data\":$data}" > ${source}.json
 
             curl "https://raw.githubusercontent.com/${{github.repository}}/${{github.ref}}/ontorefine/configs/ontorefine-config-${source}s.json" >> config-${source}.json
 
