--- a/ontorefine/configs/ontorefine-config-networks.json
+++ b/ontorefine/configs/ontorefine-config-networks.json
@@ -26,7 +26,9 @@
           "baseIRI": "http://example.com/base/",
           "namespaces": {
             "network": "http://arts-tc.ca/netwok/",
-            "schema": "http://schema.org/"
+            "schema": "http://schema.org/",
+            "adr": "http://kg.artsdata.ca/resource/",
+            "wd": "http://www.wikidata.org/entity/"
           },
           "subjectMappings": [
             {
@@ -341,7 +343,8 @@
                         "columnName": "_ - attributes - identifiers - artsdata"
                       },
                       "transformation": {
-                        "language": "raw"
+                        "language": "prefix",
+                        "expression": "adr"
                       },
                       "valueType": {
                         "type": "iri",
@@ -355,7 +358,8 @@
                         "columnName": "_ - attributes - identifiers - wikidata"
                       },
                       "transformation": {
-                        "language": "raw"
+                        "language": "prefix",
+                        "expression": "wd"
                       },
                       "valueType": {
                         "type": "iri",
