--- a/ontorefine/configs/ontorefine-config-presenters.json
+++ b/ontorefine/configs/ontorefine-config-presenters.json
@@ -25,7 +25,7 @@
       "mapping": {
         "baseIRI": "http://example.com/base/",
         "namespaces": {
-          "presenter": "https://arts-tc.ca/presenter/",
+          "presenter": "http://arts-tc.ca/presenter/",
           "schema": "http://schema.org/",
           "adr": "http://kg.artsdata.ca/resource/",
           "wd": "http://www.wikidata.org/entity/"
