--- a/ontorefine/configs/ontorefine-config-artists.json
+++ b/ontorefine/configs/ontorefine-config-artists.json
@@ -25,7 +25,7 @@
           "mapping": {
             "baseIRI": "http://example.com/base/",
             "namespaces": {
-              "artist": "https://arts-tc.ca/artist/",
+              "artist": "http://arts-tc.ca/artist/",
               "schema": "http://schema.org/",
               "adr": "http://kg.artsdata.ca/resource/",
               "wd": "http://www.wikidata.org/entity/"
