--- a/ontorefine/configs/ontorefine-config-networks.json
+++ b/ontorefine/configs/ontorefine-config-networks.json
@@ -25,7 +25,7 @@
         "mapping": {
           "baseIRI": "http://example.com/base/",
           "namespaces": {
-            "network": "http://arts-tc.ca/netwok/",
+            "network": "http://arts-tc.ca/network/",
             "schema": "http://schema.org/",
             "adr": "http://kg.artsdata.ca/resource/",
             "wd": "http://www.wikidata.org/entity/"
