--- a/ontorefine/configs/ontorefine-config-networks.json
+++ b/ontorefine/configs/ontorefine-config-networks.json
@@ -28,7 +28,8 @@
             "network": "http://arts-tc.ca/network/",
             "schema": "http://schema.org/",
             "adr": "http://kg.artsdata.ca/resource/",
-            "wd": "http://www.wikidata.org/entity/"
+            "wd": "http://www.wikidata.org/entity/",
+            "isni": "https://isni.org/isni/"
           },
           "subjectMappings": [
             {
@@ -373,7 +374,8 @@
                         "columnName": "_ - attributes - identifiers - isni"
                       },
                       "transformation": {
-                        "language": "raw"
+                        "language": "prefix",
+                        "expression": "isni"
                       },
                       "valueType": {
                         "type": "iri",
