--- a/genre_mapping.json
+++ b/genre_mapping.json
@@ -1,28 +1,28 @@
 [
-  { "tid": 7, "name": "Adult Audience", "wikidata_uri": "http://www.wikidata.org/wiki/Q11495366" },
-  { "tid": 8, "name": "Circus", "wikidata_uri": "http://www.wikidata.org/wiki/Q713197" },
-  { "tid": 9, "name": "Comedy/Humour", "wikidata_uri": "http://www.wikidata.org/wiki/Q3492850" },
-  { "tid": 10, "name": "Dance", "wikidata_uri": "http://www.wikidata.org/wiki/Q11639" },
-  { "tid": 11, "name": "Classical", "wikidata_uri": "http://www.wikidata.org/wiki/Q1020618" },
-  { "tid": 12, "name": "Contemporary", "wikidata_uri": "http://www.wikidata.org/wiki/Q186035" },
-  { "tid": 13, "name": "Cultural", "wikidata_uri": "http://www.wikidata.org/wiki/Q201022" },
-  { "tid": 14, "name": "Educational", "wikidata_uri": "http://www.wikidata.org/wiki/Q111096611" },
-  { "tid": 15, "name": "Film", "wikidata_uri": "http://www.wikidata.org/wiki/Q2295790" },
-  { "tid": 16, "name": "Indigenous", "wikidata_uri": "http://www.wikidata.org/wiki/Q103817" },
-  { "tid": 17, "name": "Interdisciplinary/Performance", "wikidata_uri": "http://www.wikidata.org/wiki/Q184485" },
-  { "tid": 18, "name": "Music", "wikidata_uri": "http://www.wikidata.org/wiki/Q638" },
-  { "tid": 19, "name": "Classical", "wikidata_uri": "http://www.wikidata.org/wiki/Q9730" },
-  { "tid": 20, "name": "Country", "wikidata_uri": "http://www.wikidata.org/wiki/Q83440" },
-  { "tid": 21, "name": "Folk/Roots/Traditional", "wikidata_uri": "http://www.wikidata.org/wiki/Q43343" },
-  { "tid": 22, "name": "Jazz/Blues", "wikidata_uri": "http://www.wikidata.org/wiki/Q8341" },
-  { "tid": 23, "name": "Popular", "wikidata_uri": "http://www.wikidata.org/wiki/Q373342" },
-  { "tid": 24, "name": "Tribute", "wikidata_uri": "http://www.wikidata.org/wiki/Q1190668" },
-  { "tid": 25, "name": "World", "wikidata_uri": "http://www.wikidata.org/wiki/Q205049" },
-  { "tid": 26, "name": "New Music", "wikidata_uri": "http://www.wikidata.org/wiki/Q8011523" },
-  { "tid": 27, "name": "Spoken Word", "wikidata_uri": "http://www.wikidata.org/wiki/Q1428637" },
-  { "tid": 28, "name": "Theatre", "wikidata_uri": "http://www.wikidata.org/wiki/Q11635" },
-  { "tid": 29, "name": "Musical Theatre", "wikidata_uri": "http://www.wikidata.org/wiki/Q2743" },
-  { "tid": 30, "name": "Opera", "wikidata_uri": "http://www.wikidata.org/wiki/Q1344" },
-  { "tid": 31, "name": "Variety", "wikidata_uri": "http://www.wikidata.org/wiki/Q117187901" },
-  { "tid": 32, "name": "Young Audience/Family", "wikidata_uri": "http://www.wikidata.org/wiki/Q2416110" }
+  { "tid": 7, "name": "Adult Audience", "wikidata_uri": "http://www.wikidata.org/entity/Q11495366" },
+  { "tid": 8, "name": "Circus", "wikidata_uri": "http://www.wikidata.org/entity/Q713197" },
+  { "tid": 9, "name": "Comedy/Humour", "wikidata_uri": "http://www.wikidata.org/entity/Q3492850" },
+  { "tid": 10, "name": "Dance", "wikidata_uri": "http://www.wikidata.org/entity/Q11639" },
+  { "tid": 11, "name": "Classical", "wikidata_uri": "http://www.wikidata.org/entity/Q1020618" },
+  { "tid": 12, "name": "Contemporary", "wikidata_uri": "http://www.wikidata.org/entity/Q186035" },
+  { "tid": 13, "name": "Cultural", "wikidata_uri": "http://www.wikidata.org/entity/Q201022" },
+  { "tid": 14, "name": "Educational", "wikidata_uri": "http://www.wikidata.org/entity/Q111096611" },
+  { "tid": 15, "name": "Film", "wikidata_uri": "http://www.wikidata.org/entity/Q2295790" },
+  { "tid": 16, "name": "Indigenous", "wikidata_uri": "http://www.wikidata.org/entity/Q103817" },
+  { "tid": 17, "name": "Interdisciplinary/Performance", "wikidata_uri": "http://www.wikidata.org/entity/Q184485" },
+  { "tid": 18, "name": "Music", "wikidata_uri": "http://www.wikidata.org/entity/Q638" },
+  { "tid": 19, "name": "Classical", "wikidata_uri": "http://www.wikidata.org/entity/Q9730" },
+  { "tid": 20, "name": "Country", "wikidata_uri": "http://www.wikidata.org/entity/Q83440" },
+  { "tid": 21, "name": "Folk/Roots/Traditional", "wikidata_uri": "http://www.wikidata.org/entity/Q43343" },
+  { "tid": 22, "name": "Jazz/Blues", "wikidata_uri": "http://www.wikidata.org/entity/Q8341" },
+  { "tid": 23, "name": "Popular", "wikidata_uri": "http://www.wikidata.org/entity/Q373342" },
+  { "tid": 24, "name": "Tribute", "wikidata_uri": "http://www.wikidata.org/entity/Q1190668" },
+  { "tid": 25, "name": "World", "wikidata_uri": "http://www.wikidata.org/entity/Q205049" },
+  { "tid": 26, "name": "New Music", "wikidata_uri": "http://www.wikidata.org/entity/Q8011523" },
+  { "tid": 27, "name": "Spoken Word", "wikidata_uri": "http://www.wikidata.org/entity/Q1428637" },
+  { "tid": 28, "name": "Theatre", "wikidata_uri": "http://www.wikidata.org/entity/Q11635" },
+  { "tid": 29, "name": "Musical Theatre", "wikidata_uri": "http://www.wikidata.org/entity/Q2743" },
+  { "tid": 30, "name": "Opera", "wikidata_uri": "http://www.wikidata.org/entity/Q1344" },
+  { "tid": 31, "name": "Variety", "wikidata_uri": "http://www.wikidata.org/entity/Q117187901" },
+  { "tid": 32, "name": "Young Audience/Family", "wikidata_uri": "http://www.wikidata.org/entity/Q2416110" }
 ]
