typo for prefLabel

--- a/ontorefine/configs/ontorefine-config-shows.json
+++ b/ontorefine/configs/ontorefine-config-shows.json
@@ -451,7 +451,7 @@
                 "property": {
                   "valueSource": {
                     "source": "constant",
-                    "constant": "preLabel"
+                    "constant": "prefLabel"
                   },
                   "transformation": {
                     "language": "prefix",
