switch broader to narrower

--- a/ontorefine/configs/ontorefine-config-categories.json
+++ b/ontorefine/configs/ontorefine-config-categories.json
@@ -131,7 +131,7 @@
                 "property": {
                   "valueSource": {
                     "source": "constant",
-                    "constant": "broader"
+                    "constant": "narrower"
                   },
                   "transformation": {
                     "language": "prefix",
