--- a/ontorefine/configs/ontorefine-config-genres.json
+++ b/ontorefine/configs/ontorefine-config-genres.json
@@ -118,7 +118,7 @@
                 "property": {
                   "valueSource": {
                     "source": "constant",
-                    "constant": "broader"
+                    "constant": "narrower"
                   },
                   "transformation": {
                     "language": "prefix",
